<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/LightGray"
    tools:context=".SignUp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LoremIpsum"
                android:textSize="30sp"
                android:textColor="@color/DarkSlateGray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/DarkSlateGray"
                android:textSize="17sp"
                android:text="@string/simply"/>
        </LinearLayout>
        <EditText
            android:background="@drawable/edittext"
            android:autofillHints="username"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_width="300dp"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:background="@drawable/edittext"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textVisiblePassword"
            android:layout_width="300dp"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/google"
                    android:contentDescription="@string/google" />
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/apple"
                    android:contentDescription="@string/apple"/>
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/microsoft"
                    android:contentDescription="@string/microsoft"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/toSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/createUp"
                    android:textAlignment="center"
                    android:textColor="@color/DarkSlateGray"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>